Cumulative Layout Shift fixed

--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -2,19 +2,19 @@
 
 @font-face {
   font-family: "Vinila Extended";
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/Vinila-Rg-Ex.woff2") format("woff2"), url("/fonts/Vinila-Rg-Ex.woff") format("woff");
 }
 
 @font-face {
   font-family: "Vinila Extended Bold";
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/Vinila-Bd-Ex.woff2") format("woff2"), url("/fonts/Vinila-Bd-Ex.woff") format("woff");
 }
 
 @font-face {
   font-family: "Vinila Extended Light";
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/Vinila-Lt-Ex.woff2") format("woff2"), url("/fonts/Vinila-Lt-Ex.woff") format("woff");
 }
 
@@ -22,7 +22,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   src: url("/fonts/roboto-v29-latin-regular.eot"); /* IE9 Compat Modes */
   src: url("/fonts/roboto-v29-latin-regular.eot?#iefix") format("embedded-opentype"),
     /* IE6-IE8 */ url("/fonts/roboto-v29-latin-regular.woff2") format("woff2"),
